Fix icon hover label being cut off in the small editor

--- a/site/styles.css
+++ b/site/styles.css
@@ -494,7 +494,6 @@ option,
 .editor-area {
     grid-area: editor;
     position: relative;
-    overflow: hidden;
 }
 
 #code-area {
@@ -1692,5 +1691,9 @@ a.clean {
 
     .draggable-splitter {
         display: block;
+    }
+
+    .editor-area {
+        overflow: hidden;
     }
 }
